Pass-List-App/manifest/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejsapp-deployment
  labels:
    app: nodejsapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejsapp
  template:
    metadata:
      labels:
        app: nodejsapp
    spec:
      containers:
      - name: nodejsapp
        image: nodejsimage:latest
        ports:
        - containerPort: 3000
