Pass-List-App/manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:    
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejsapp-service
            port:
              number: 3000
